<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StockTicker</string>
    <string name="action_settings">Settings</string>
    <string name="show">Anzeigen</string>
    <string name="from">Von</string>
    <string name="to">Bis</string>
    <string name="stocks">Aktien</string>
    <string name="savedStocks">Portfolio</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    
    <string name="firstname">Vorname</string>
    <string name="surname">Nachname</string>
    <string name="user">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="password_reply">Passwort wiederholen</string>
    <string name="login">Login</string>
    <string name="signup">Registrieren</string>
    
    <string name="err_no_stocks">Keine Aktien ausgewählt!</string>
    <string name="err_fillin">Alle Daten angeben!</string>
    <string name="err_password">Alle Daten angeben!</string>
    <string name="err_date_to">Datum muss nach Beginndatum liegen!</string>
    <string name="err_no_credentials">Username/Passwort eingeben!</string>
    <string name="err_wrong_credentials">Username/Passwort nicht korrekt!</string>
    
    <string name="user_created">User angelegt</string>
    
    <string name="chart_title">Aktien</string>
    <string name="chart_xlabel">Datum</string>
    <string name="chart_ylabel">€</string>
    
    
    <string-array name="test_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>Table Tennis</item>
        <item>Basket Ball</item>
        <item>Foot Ball</item>
        <item>Volley Ball</item>
        <item>Hockey</item>
        <item>Swimming</item>
    </string-array>
    <string-array name="stockoptions"></string-array>

</resources>
