<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textFromLabel"
        android:labelFor="@+id/dateFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from" />

    <EditText
        android:id="@+id/dateFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/dateToLabel"
        android:labelFor="@+id/dateTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to" />

    <EditText
        android:id="@+id/dateTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />
    
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/buttonStocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stocks" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button 2" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
     /> 
</LinearLayout>